<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Productversion="">
  <DUT Name="ST_HMI_C1_Ctrl1_Pareto_Analysis" Id="130cce5e-9009-4b30-85b7-8fbf7fc18407">
    <Declaration><![CDATA[TYPE ST_HMI_C1_Ctrl1_Pareto_Analysis : 
STRUCT
	//Pareto Analysis
	bTrigReconfigure: BOOL;
	sM3_sChannelNamesResult1: STRING(255); //ChannelNames
	sM3_sChannelNamesResult2: STRING(255); //ChannelNames
	aM3_aResult: ARRAY [1..2] OF LREAL; //AbsoluteValues
	aM3_aRelativeResult: ARRAY [1..2] OF LREAL; //RelativeValues
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>